--- a/index.html
+++ b/index.html
@@ -1,148 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shankaralinga Perumal Kannapiran</title>
+  <title>Shankaralingam P K | Career Portfolio</title>
   <style>
     :root {
-      --bg-light: #ffffff;
-      --text-light: #111111;
-      --bg-dark: #121212;
-      --text-dark: #e0e0e0;
-      --border-color: #cccccc;
+      --bg-color: #121212;
+      --text-color: #ffffff;
+      --section-border: #333;
+      --accent-color: #00bfa6;
+    }
+
+    body.light-mode {
+      --bg-color: #f9f9f9;
+      --text-color: #1a1a1a;
+      --section-border: #ccc;
     }
 
     body {
+      background-color: var(--bg-color);
+      color: var(--text-color);
       font-family: Arial, sans-serif;
-      line-height: 1.6;
       margin: 0;
-      padding: 0;
-      background-color: var(--bg-light);
-      color: var(--text-light);
-      transition: background-color 0.3s, color 0.3s;
+      padding: 2rem;
+      transition: background 0.3s, color 0.3s;
     }
 
-    .container {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-
-    header, section {
-      border: 1px solid var(--border-color);
+    .toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      padding: 0.5rem 1rem;
+      background: var(--accent-color);
+      border: none;
+      color: white;
+      cursor: pointer;
       border-radius: 5px;
-      padding: 1rem;
-      margin-bottom: 1.5rem;
-      background: inherit;
     }
 
     h1, h2 {
-      margin-top: 0;
+      color: var(--accent-color);
     }
 
-    .toggle-btn {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      background: #333;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
+    section {
+      border: 1px solid var(--section-border);
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
     }
 
-    body.dark-mode {
-      background-color: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    body.dark-mode header,
-    body.dark-mode section {
-      border-color: #444;
+    a {
+      color: var(--accent-color);
     }
   </style>
 </head>
+
 <body>
-  <button class="toggle-btn" onclick="toggleMode()">Toggle Dark Mode</button>
-  <div class="container">
-    <header>
-      <h1>Shankaralinga Perumal Kannapiran</h1>
-      <h2>Senior Manufacturing and Supplier Development Engineer</h2>
-    </header>
+  <button class="toggle" onclick="toggleMode()">Toggle Dark/Light</button>
 
-    <section>
-      <h2>Career Highlights</h2>
-      <ul>
-        <li>8+ years of experience across manufacturing engineering, supplier quality, and product development.</li>
-        <li>Led strategic supplier development projects with a focus on PPAP, APQP, SCAR, and process optimization.</li>
-        <li>Hands-on experience in managing cross-functional teams and continuous improvement in EV startups.</li>
-        <li>Strong analytical and technical skills using PowerBi, Jira, and engineering tools like CATIA, ANSYS, and MATLAB.</li>
-        <li>Seeking impactful leadership roles in innovative, high-growth manufacturing companies.</li>
-      </ul>
-    </section>
+  <section>
+    <h1>Shankaralingam P Kannapiran</h1>
+    <p>Email: <a href="mailto:shankaralingaperumal@gmail.com">shankaralingaperumal@gmail.com</a></p>
+    <p>Phone: +1 682-414-5568</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/shankaralingaperumal-kannapiran-05352b74/" target="_blank">Profile</a></p>
+  </section>
 
-    <section>
-      <h2>Experience</h2>
-      <p><strong>Senior Supplier Development Engineer – Rivian</strong> (Oct 2024 – Present)</p>
-      <ul>
-        <li>Lead supplier quality compliance and PPAP validation for new production parts.</li>
-        <li>Drive root cause analysis, on-site audits, and implementation of corrective actions.</li>
-        <li>Collaborate with suppliers to enhance performance and meet GA specifications.</li>
-      </ul>
-      <p><strong>Quality Engineer II – Rivian</strong> (Jan 2023 – Oct 2023)</p>
-      <ul>
-        <li>Reduced rework cost and improved rework cycle time through time studies and PowerBi dashboards.</li>
-        <li>Led high-priority quality workflows for EDV battery and motor projects.</li>
-        <li>Developed 3D-printed fixtures and work instructions for third-party rework vendors.</li>
-      </ul>
-      <p><strong>Engineering Manager – ATCO Industries Inc</strong> (May 2021 – Jan 2023)</p>
-      <ul>
-        <li>Led consumable inventory and 5-S implementation improving Rivian compliance scores.</li>
-        <li>Expanded ATCO services to new Rivian operations including Battery, Harness, and GA.</li>
-        <li>Reduced rework space and improved process efficiency using data-driven studies.</li>
-      </ul>
-      <p><strong>Project Engineer – University of Texas at Arlington</strong> (Feb 2019 – Dec 2019)</p>
-      <ul>
-        <li>Designed and validated rocket engine prototypes and components using CATIA & ANSYS.</li>
-        <li>Improved impact absorption systems with cost-effective, additive manufacturing methods.</li>
-      </ul>
-      <p><strong>Mechanical Engineer – Sri Gokul Engineer Pvt Ltd</strong> (Aug 2016 – Oct 2018)</p>
-      <ul>
-        <li>Optimized CNC machining, reduced material wastage, and improved communication with vendors.</li>
-        <li>Increased productivity and supported new product introduction in high-volume settings.</li>
-      </ul>
-      <p><strong>Research Assistant – Anna University</strong> (Sep 2014 – Apr 2016)</p>
-      <ul>
-        <li>Developed hybrid rocket engine components and increased efficiency using Six Sigma principles.</li>
-        <li>Documented testing outcomes and design specs in compliance with R&D protocols.</li>
-      </ul>
-    </section>
+  <section>
+    <h2>About Me</h2>
+    <p>I am a seasoned Supplier Quality and Manufacturing Engineer with over 8 years of experience delivering results in dynamic automotive environments. My journey has been focused on process improvement, cross-functional collaboration, and cost optimization. I'm passionate about problem solving, continuous learning, and transforming complex challenges into sustainable solutions.</p>
+  </section>
 
-    <section>
-      <h2>Education</h2>
-      <ul>
-        <li><strong>M.S. Mechanical Engineering</strong> – University of Texas at Arlington (2019–2020)</li>
-        <li><strong>B.E. Aeronautical Engineering</strong> – Anna University, Chennai (2012–2016)</li>
-      </ul>
-    </section>
+  <section>
+    <h2>Career Journey</h2>
+    <ul>
+      <li>🔧 Senior Supplier Quality Engineer, 2023–Present – Leading SQ processes and systems at Tier 1 suppliers.</li>
+      <li>🚗 Supplier Industrialization Engineer – Streamlined launch controls and PPAPs for global manufacturing scale.</li>
+      <li>📊 Quality Engineer – Developed FMEA, control plans, and standardized metrics for supplier performance.</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>Certifications & Skills</h2>
-      <ul>
-        <li>Certifications: Six Sigma Green Belt, GD&T, FMEA, Lean Manufacturing, Supply Chain, Project Management</li>
-        <li>Design Software: CATIA V5, AutoCAD, SolidWorks, MATLAB, ANSYS</li>
-        <li>Tools: PowerBi, Smartsheet, Jira, MS Office, Excel</li>
-        <li>Skills: Leadership, Presentation, Negotiation, Root Cause Analysis, Data Interpretation</li>
-      </ul>
-    </section>
-  </div>
+  <section>
+    <h2>Impact Highlights</h2>
+    <ul>
+      <li>✔️ Reduced contractor cost by 50% by enforcing direct chargebacks.</li>
+      <li>✔️ Deployed rework efficiency metrics, improving labor tracking across supplier sites.</li>
+      <li>✔️ Created quality training modules that raised internal audit scores by 35%.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Skills & Tools</h2>
+    <ul>
+      <li>Manufacturing: APQP, PPAP, Lean, DFMEA, PFMEA</li>
+      <li>Quality: ISO 9001, IATF 16949, 8D, Root Cause Analysis</li>
+      <li>Tools: PowerBI, SAP, Jira, CATIA, Tableau</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Project Stories</h2>
+    <p><strong>Supplier Recovery Program (2022):</strong> Rebuilt failing supply chain from 4-week delays to on-time delivery within 2 months through supplier audits and action planning.</p>
+    <p><strong>New Product Launch - EV Platform:</strong> Integrated supplier quality gates and shortened launch ramp-up time by 40%.</p>
+  </section>
+
+  <section>
+    <h2>Contact & Resume</h2>
+    <p>Email me at <a href="mailto:shankaralingaperumal@gmail.com">shankaralingaperumal@gmail.com</a> or download my <a href="#">resume</a>.</p>
+  </section>
 
   <script>
     function toggleMode() {
-      document.body.classList.toggle('dark-mode');
+      document.body.classList.toggle("light-mode");
     }
   </script>
 </body>
+
 </html>
