--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shankaralingam P K | Career Portfolio</title>
+  <title>Shankaralinga Perumal Kannapiran | Career Portfolio</title>
   <style>
     :root {
       --bg-color: #121212;
